2006-12-28  Sven Schuetz
	* cimXmlGen.c:
	applied patch from Adrian Schuur
	Fixed 1623249: Incomplete <PROPERTY> xml generated
	
	* classProviderGz.c:
	Fixed 1621417: associators and references calls fail in SFCB 1.2

2006-12-22  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* cmpimacs.h: 
	Fixed 1620730: cmpimacs.h C++ wrapper definition mismatch.

2006-12-21  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-70.boeblingen.de.ibm.com>

	* default.reg:
	Fixed 1620151: using caching class provider as default now.

	* brokerUpc.c, cimXmlGen.c, cimXmlParser.c, cimcClientSfcbLocal.c,
	constClass.c, context.c, httpAdapter.c, httpAdapter.c, httpComm.h,
	instance.c, interopProvider.c, mofpp.c, msgqueue.c, objectImpl.c,
	predicate.c, providerDrv.c, providerMgr.c, providerRegister.h,
	queryStatement.c, result.c, selectexp.c, sfcBroker.c, sfcbdump.c,
	support.c:
	Fixed 1620136: compile warnings on 32- and 64-bit platforms.

2006-12-21  Sven Schuetz

	* cimslp.h, cimslp.c, sfcBroker.c:
	Fixed 1620005: unnecessary fork when slp is enabled
	
	* interopServerProvider:
	Fixed 1620020: allocation error in interopServerProvider

2006-12-19  Adrian Schuur

	* msgqueue.c: 
	Fixed 1616130: bad message during shutdown. Also fixes some
	valgrind complaints.

2006-12-18  Sven Schuetz
	* cimslpCMPI.c, cimslp.c, cimslpCMPI.h, cimslpSLP.c, 
	Fixed 1618258: slp problems when ssl is enabled

2006-12-18  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* array.c, cimXmlGen.c, cimXmlRequest.c, objectImpl.c, objectpath.c: 

	Fixed 1618216: corrected handling of references in arrays, null
	argument handling and formatting of resultvalues.
	
2006-12-14  Sven Schuetz
	* cimslpCMPI.c, cimslp.h, trace.h, trace.c, cimslp.c, Makefile.am, 
	cimslpCMPI.h, cimslpUtil.h, cimslpSLP.h, cimslpSLP.c:
	Fixed 1615731: slp enhancements (shutdown, tracing)

2006-12-14  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-70.boeblingen.de.ibm.com>

	* cimXmlOps.y, cimXmlGen.c: 